--- a/SMSTimetable/SMSTimetable/packages.config
+++ b/SMSTimetable/SMSTimetable/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EasyHttp" version="1.7.0" targetFramework="net461" />
+  <package id="Google.Protobuf" version="3.5.1" targetFramework="net461" />
   <package id="JsonFx" version="2.0.1209.2802" targetFramework="net461" />
+  <package id="MySql.Data" version="8.0.11" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="net45" />
   <package id="Telegram.Bot" version="14.6.0" targetFramework="net45" />
