--- a/SMSTimetable/SMSTimetable/packages.config
+++ b/SMSTimetable/SMSTimetable/packages.config
@@ -1,10 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.50.2" targetFramework="net461" />
   <package id="EasyHttp" version="1.7.0" targetFramework="net461" />
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net461" />
+  <package id="Hangfire.Core" version="1.5.3" targetFramework="net461" />
+  <package id="Hangfire.MySqlStorage.MysqlConnector" version="1.0.5.1" targetFramework="net461" />
   <package id="JsonFx" version="2.0.1209.2802" targetFramework="net461" />
-  <package id="MySql.Data" version="8.0.11" targetFramework="net461" />
+  <package id="MySqlConnector" version="0.42.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net461" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="net45" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="Telegram.Bot" version="14.6.0" targetFramework="net45" />
 </packages>
