--- a/SMSTimetable/SMSTimetable/packages.config
+++ b/SMSTimetable/SMSTimetable/packages.config
@@ -9,8 +9,7 @@
   <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Portable.Compatibility" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="ModernDev.InTouch" version="1.0.27" targetFramework="net461" />
-  <package id="MySqlConnector" version="0.42.2" targetFramework="net461" />
+  <package id="MySqlConnector" version="0.42.3" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net461" />
@@ -55,6 +54,7 @@
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net461" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
