Добавил изменение пароля - еще надо доделать

--- a/SMSTimetable/SMSTimetable/SMSTimetable.csproj
+++ b/SMSTimetable/SMSTimetable/SMSTimetable.csproj
@@ -286,6 +286,9 @@
     <Compile Include="UserChangeEmailWindow.xaml.cs">
       <DependentUpon>UserChangeEmailWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserChangePasswordWindow.xaml.cs">
+      <DependentUpon>UserChangePasswordWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserChangerWindow.xaml.cs">
       <DependentUpon>UserChangerWindow.xaml</DependentUpon>
     </Compile>
@@ -325,6 +328,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserChangeEmailWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserChangePasswordWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
