--- a/SMSTimetable/SMSTimetable/packages.config
+++ b/SMSTimetable/SMSTimetable/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Dapper" version="1.50.5" targetFramework="net461" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net461" />
+  <package id="HandyControl" version="1.3.2" targetFramework="net461" />
   <package id="Hangfire.Core" version="1.6.20" targetFramework="net461" />
   <package id="Hangfire.MySqlStorage.MysqlConnector" version="1.0.5.1" targetFramework="net461" />
   <package id="HttpToSocks5Proxy" version="1.0.5" targetFramework="net461" />
