Небольшой фикс программы + продолжаем пилить курсач (docx)

--- a/SMSTimetable/SMSTimetable/SMSTimetable.csproj
+++ b/SMSTimetable/SMSTimetable/SMSTimetable.csproj
@@ -277,6 +277,7 @@
     <Compile Include="EmailSenderClass.cs" />
     <Compile Include="JustTokenClass.cs" />
     <Compile Include="ParseJSONLogicClass.cs" />
+    <Compile Include="PingClass.cs" />
     <Compile Include="SenderWindow.xaml.cs">
       <DependentUpon>SenderWindow.xaml</DependentUpon>
     </Compile>
